@@ -1,3 +1,7 @@
+Tue May  3 15:56:47 2005  John-Mark Bell  <jmb202@ecs.soton.ac.uk>
+	* clib/sys/queue.h: Update to more recent version including more
+	  queue types.
+	
 Mon May  2 14:51:58 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* module/sul.s (sul_fork): For consistency, shrink parent pid to
